@@ -1,5 +1,9 @@
 2011-09-02  Tri Kurniawan Wijaya  <trikurniawanwijaya@gmail.com>
 
+	* include/dlvhex/MLPSyntaxChecker.hpp: Fixed problem posed by deleting ModuleSyntaxChecker.hpp.
+	* src/dlvhex/MLPSyntaxChecker.cpp: Likewise.
+	* src/dlvhex/State.cpp: Likewise.
+
 	* include/dlvhex/ModuleSyntaxChecker.hpp: Separates ModuleSyntaxChecker.hpp into MLPSyntaxChekcer.hpp and MLPSyntaxChekcer.cpp.
 	* include/dlvhex/MLPSyntaxChecker.hpp: Likewise.
 	* include/dlvhex/Makefile.am: Likewise.
